Lexico/Expr.g4
grammar Expr;

root : expr EOF;

//
expr : EOF ;

//Palabras reservadas y palabras clave contextuales
SYSTEM: 'System';
OUT: 'out';
PRINT: 'print';
PRINTLN: 'println';
MAIN: 'main';
STRING: 'String';
OBJECT: 'Object';
MATH: 'Math';
INTEGER: 'Integer';
CHARACTER: 'Character';
THREAD: 'Thread';
EXCEPTION: 'Exception';
THROWABLE: 'Throwable';
STRINGBUILDER: 'StringBuilder';
STRINGBUFFER: 'StringBuffer';
RUNTIME: 'Runtime';
PROCESS: 'Process';
CLASS: 'Class';
ENUM_CLASS: 'Enum';
ABST: 'abstract';
ASSE: 'assert';
BOOL: 'boolean';
BREA: 'break';
BYTE: 'byte';
CASE: 'case';
CATC: 'catch';
CHAR: 'char';
CLAS: 'class';
CONS: 'const';
CONT: 'continue';
DEFA: 'default';
DO: 'do';
DOUB: 'double';
ELSE: 'else';
ENUM: 'enum';
EXTE: 'extends';
FINA: 'final';
FINALY: 'finalLy';
FLOAT: 'float';
FOR: 'for';
GOTO: 'goto';
IF: 'if';
IMPL: 'implements';
IMPO: 'import';
INST: 'instanceof';
INT: 'int';
INTE: 'interface';
LONG: 'long';
NATI: 'native';
NEW: 'new';
PACK: 'package';
PRIV: 'private';
PROT: 'protected';
PUBL: 'public';
RETU: 'return';
SHOR: 'short';
STAT: 'static';
STRI: 'strictfp';
SUPE: 'super';
SWIT: 'switch';
SYNC: 'synchronized';
THIS: 'this';
THRO: 'throw';
THROWS: 'throws';
TRAN: 'transient';
TRY: 'try';
VOID: 'void';
VOLA: 'volatile';
WHIL: 'while';
GUIO_BAJ: '_';
EXPO: 'exports';
MODU: 'module';
NON_S: 'non-sealed';
OPEN: 'open';
OPENS: 'opens';
PERM: 'permits';
PROV: 'provides';
RECO: 'record';
REQU: 'requires';
SEAL: 'sealed';
TO: 'to';
TRANS: 'transitive';
USES: 'uses';
VAR: 'var';
WITH: 'with';
YIEL: 'yield';
TRUE: 'true';
FALSE: 'false';
NULL: 'null';

//IMPORTS
SCANNER: 'Scanner';
ARRAYLIST: 'ArrayList';
LINKEDLIST: 'LinkedList';
HASHMAP: 'HashMap';
TREEMAP: 'TreeMap';
HASHSET: 'HashSet';
TREESET: 'TreeSet';
QUEUE: 'Queue';
STACK: 'Stack';
DEQUE: 'Deque';
VECTOR: 'Vector';
COLLECTIONS: 'Collections';
ARRAYS: 'Arrays';
OPTIONAL: 'Optional';
UUID: 'UUID';
RANDOM: 'Random';
DATE: 'Date';
CALENDAR: 'Calendar';
FILE: 'File';
FILEREADER: 'FileReader';
FILEWRITER: 'FileWriter';
BUFFEREDREADER: 'BufferedReader';
BUFFEREDWRITER: 'BufferedWriter';
PRINTWRITER: 'PrintWriter';
INPUTSTREAM: 'InputStream';
OUTPUTSTREAM: 'OutputStream';
IOEXCEPTION: 'IOException';
CONNECTION: 'Connection';
STATEMENT: 'Statement';
PREPAREDSTATEMENT: 'PreparedStatement';
RESULTSET: 'ResultSet';
DRIVERMANAGER: 'DriverManager';
SQLEXCEPTION: 'SQLException';
APPLICATION: 'Application';
STAGE: 'Stage';
SCENE: 'Scene';
BUTTON: 'Button';
LABEL: 'Label';
TEXTFIELD: 'TextField';
TABLEVIEW: 'TableView';
IMAGE: 'Image';
IMAGEVIEW: 'ImageView';
VBOX: 'VBox';
HBOX: 'HBox';
GRIDPANE: 'GridPane';
BORDERPANE: 'BorderPane';
ANCHORPANE: 'AnchorPane';
PRINTF: 'printf';
NEXT: 'next';
NEXTINT: 'nextInt';
NEXTDOUBLE: 'nextDouble';
NEXTFLOAT: 'nextFloat';
NEXTLINE: 'nextLine';
NEXTBOOLEAN: 'nextBoolean';
PARSEINT: 'parseInt';
PARSEDOUBLE: 'parseDouble';
VALUEOF: 'valueOf';
LENGTH: 'length';
CHARAT: 'charAt';
SUBSTRING: 'substring';
EQUALS: 'equals';
COMPARETO: 'compareTo';
TOSTRING: 'toString';
PI: 'PI';
E: 'E';
ERR: 'err';
IN: 'in';
OVERRIDE: '@Override';
DEPRECATED: '@Deprecated';
SUPPRESSWARNINGS: '@SuppressWarnings';
FUNCTIONALINTERFACE: '@FunctionalInterface';
SAFEVARARGS: '@SafeVarargs';


//OPERADORES
ASIG: '=';
SUMA_ASIG: '+=';
RESTA_ASIG: '-=';
MULTI_ASIG: '*=';
DIVI_ASIG: '/=';
MODU_ASIG: '%=';
AND_ASIG: '&=';
OR_ASIG: '|=';
XOR_ASIG: '^=';
DESPLA_IZQ_ASIG: '<<=';
DESPLA_DER_ASIG: '>>=';
DESPLA_DER_SIN_SIGNO_ASIG: '>>>=';
MAS: '+';
MENOS: '-';
POR: '*';
DIVI: '/';
PORSE: '%';
INCRE: '++';
DISMI: '--';
IGUAL_QUE: '==';
DIFER_DE: '!=';
MENOR: '<';
MAYOR: '>';
MENOR_ASIG: '<=';
MAYOR_ASIG: '>=';
AND: '&&';
OR: '||';
NOT: '!';
AND_BIT: '&';
OR_BIT: '|';
XOR: '^';
COMPLE: '~';
DESPL_IZQ: '<<';
DESPL_DER: '>>';
DESPL_DER_SIN_SIGNO: '>>>';
CONDI: '?';
SEPAR: ':';
LAMBDA: '->';
REFERENCIA: '::';

//SEPARADORES
PARE_IZQ: '(';
PARE_DER: ')';
LLAV_IZQ: '{';
LLAV_DER: '}';
CORC_IZQ: '[';
CORC_DER: ']';
PUNTO_COMA: ';';
COMA: ',';
PUNTO: '.';
VARARGS: '...';
ANOTACION: '@';
EXP_REGU: [a-zA-Z_$][a-zA-Z0-9_$]*;
NUM: [0-9]+;
NUM_REGU : [0-9]+ '.' [0-9]+ [fFdD]?;
CADENA: '"' ( '\\' . | ~["\\] )* '"';
REPRE_CHAR: '\'' ( '\\' . | ~['\\\r\n] ) '\'';
WS: [ \t\r\n]+ -> skip ;


/*  RODRIGUEZ BELMAN DIEGO ALBERTO 20031358
    ERICK EDUARDO HERNÁNDEZ ARIZA 20031179
    OLIVER VÁSQUEZ SANTIAGO 22031030 */ 
